Added another missing open flag for running tests (needed for JDK 16).